--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,5 +1,13 @@
 .container {
-  padding: 0 2rem;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  /* background-color: #3490dc; */
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
 }
 
 .main {
